@@ -1,4 +1,7 @@
 """Constants for interpreting the results of os.statvfs() and os.fstatvfs()."""
+from warnings import warnpy3k
+warnpy3k("the statvfs module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 # Indices for statvfs struct members in the tuple returned by
 # os.statvfs() and os.fstatvfs().
