@@ -37,6 +37,8 @@ Extension Modules
 Library
 -------
 
+- The statvfs module has been deprecated for removal in Python 3.0.
+
 - The sunaudiodev and SUNAUDIODEV modules have been deprecated for removal in
   Python 3.0.
 
